a bit jump! add comment and yochat publish

--- a/SeeYo/app/assets/stylesheets/myruby.css.erb
+++ b/SeeYo/app/assets/stylesheets/myruby.css.erb
@@ -5,6 +5,17 @@ body {
   background-size: cover;
 }
 
-.bg-white {
-  background-color: white;
+.mytable {
+  border-top:2px solid #ddd;
+  border-bottom:2px solid #ddd;
+  border-collapse:collapse;
+  width:100%;
+  max-width:100%;
+  margin:8px;
+}
+
+td {
+  padding: 0px 8px;
+  height:40px;
+  vertical-align: center;
 }
