--- a/SeeYo/app/views/staticpages/_profile.html.erb
+++ b/SeeYo/app/views/staticpages/_profile.html.erb
@@ -1,19 +1,23 @@
 <div class="row-fluid">
   <div class="col-md-12" >
     <%= image_tag("a.jpg", class:"img-circle center-block") %>
-    <p class="text-center"><strong>wwWwwCcc</strong></p>
-    <div class="row-fluid">
-      <div class="col-md-4" >
-        <p class="text-center"> 01</p>
-        <p class="text-center">Follow</p>
+    <br />
+    <p class="text-center"><strong><%= @user.username %></strong></p>
+    <div class="btn-group btn-group-justified" role="group" aria-label="...">
+      <div class="btn-group" role="group">
+        <button type="submit" class="btn btn-default btn-xs">
+        <h1 class="text-center"><%= @fans.count %></h1>
+        <h6 class="text-center">Followers</h6></button>
       </div>
-      <div class="col-md-4" >
-        <p class="text-center"> 01</p>
-        <p class="text-center">Followed</p>
+      <div class="btn-group" role="group">
+        <button type="submit" class="btn btn-default btn-xs">
+        <h1 class="text-center"><%= @focus.count %></h1>
+        <h6 class="text-center">Following</h6></button>
       </div>
-      <div class="col-md-4" >
-        <p class="text-center"> 01</p>
-        <p class="text-center">Yochat</p>
+      <div class="btn-group" role="group">
+        <button type="submit" class="btn btn-default btn-xs">
+        <h1 class="text-center" id="yochat_count" ><%= @yochats.count %></h1>
+        <h6 class="text-center">YoChat</h6></button>
       </div>
     </div>
   </div>
