--- a/SeeYo/app/views/common/_usernav.html.erb
+++ b/SeeYo/app/views/common/_usernav.html.erb
@@ -1,7 +1,7 @@
 <% if user_signed_in? %>
   <li><%= link_to t(:Homepage),  root_path %></li>
-  <li><%= link_to t(:Square),  square_path %></li>
-  <li><%= link_to current_user.email, profile_path(current_user.email) %></li>
+  <li><%= link_to t(:Plaza),  plaza_path %></li>
+  <li><%= link_to current_user.username, profile_path(current_user.id)%></li>
   <li class="dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Settings <span class="caret"></span></a>
     <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
