--- a/SeeYo/app/views/layouts/application.html.erb
+++ b/SeeYo/app/views/layouts/application.html.erb
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <% if user_signed_in? %>
-    <title><%= current_user.email%></title>
-  <% else %>
-    <title><% "SeeYo" %></title>
-  <% end %>
+  <title><%= @page_title %></title>
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -14,7 +10,7 @@
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="navbar-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="/">See Yoo</a>
+          <a class="navbar-brand" href="/">See Yo</a>
         </div>
         <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
