--- a/SeeYo/app/views/staticpages/welcome.html.erb
+++ b/SeeYo/app/views/staticpages/welcome.html.erb
@@ -1,5 +1,14 @@
 <% if user_signed_in? %>
   <%= render :partial => "staticpages/homepage" %>
 <% else %>
-  <p><%= @username || "Welcome to SeeYo" %> - SeeYo</p>
+  <div class="row-fluid">
+    <div class="col-md-8 col-md-offset-2">
+      <div class="jumbotron">
+        <h1>Welcome to SeeYo!</h1>
+        <p>balabalabalabalba</p>
+        <p class="text-center"><a class="btn btn-primary btn-lg" href="users/sign_up" role="button">Sign up</a></p>
+        <p class="text-center"><a class="btn btn-default btn-lg" href="users/sign_in" role="button">Sign in</a></p>
+      </div>
+    </div>
+  </div>
 <% end %>
