delete follow followed profile

--- a/SeeYo/app/assets/stylesheets/myruby.css.erb
+++ b/SeeYo/app/assets/stylesheets/myruby.css.erb
@@ -6,16 +6,37 @@ body {
 }
 
 .mytable {
-  border-top:2px solid #ddd;
-  border-bottom:2px solid #ddd;
+  border-top:1px solid #EEE;
+  border-bottom:1px solid #EEE;
   border-collapse:collapse;
   width:100%;
   max-width:100%;
-  margin:8px;
 }
 
 td {
   padding: 0px 8px;
   height:40px;
   vertical-align: center;
+}
+
+.td-xs {
+  height: auto;
+}
+
+.vcard-stat:hover {
+  text-decoration: none;
+}
+
+.vcard-stat:hover .text-muted {
+  color: inherit;
+}
+
+.vard-stats {
+  border-collapse:collapse;
+  width:100%;
+  max-width:100%;
+  margin:8px;
+}
+a:active, a:hover {
+    outline: 0px none;
 }
