--- a/SeeYo/app/views/common/_yochat_show.html.erb
+++ b/SeeYo/app/views/common/_yochat_show.html.erb
@@ -1,12 +1,12 @@
+
 <div class="row-fluid">
     <div class="col-md-12" >
-      <br />
-      <legend><%= @title %></legend>
+      <legend><%= @block_title %></legend>
       <div id="symbol_div" class="-1"></div>
-    <div class="row-fluid">
-      <div class="col-md-12" id="yochats_div">
-      <%= render @yochats %>
-    </div>
+      <div class="row-fluid">
+        <div class="col-md-12" id="yochats_div">
+          <%= render @yochats %>
+        </div>
       </div>
-    </div>
   </div>
+</div>
