--- a/SeeYo/app/views/users/index.html.erb
+++ b/SeeYo/app/views/users/index.html.erb
@@ -1,9 +1,13 @@
-<div class="container-fluid" id="LG">
+<div class="container-fluid" id="MD">
   <div class="row-fluid">
-    <div class="col-lg-4">
-      <%= render :partial => "staticpages/profile" %>
+    <div class="col-md-4">
+      <div class="row-fluid">
+        <div class="col-md-12">
+      <%= render :partial => "common/profile_simple" %>
+        </div>
+      </div>
     </div>
-    <div class="col-lg-8">
+    <div class="col-md-8">
       <div class="row-fluid">
         <div class="col-md-12 bg-white" >
           <fieldset>
