--- a/SeeYo/app/views/common/_comment_submit.html.erb
+++ b/SeeYo/app/views/common/_comment_submit.html.erb
@@ -2,13 +2,15 @@
 	<div class="col-md-2">
 		<%= image_tag("head.jpg") %>
 	</div>
-	<div class="col-md-8">
-      <%= form_for @comment, remote: true, :url => yochat_comments_path(@yochat) do |f| %>
+    <%= form_for @comment, remote: true, :url => yochat_comments_path(@yochat) do |f| %>
+	<div class="col-md-10">
+      <div class="input-group">
         <%= f.text_area :content, :rows => 1, :placeholder => "Comment...", :style => "resize:none", :class => "form-control", :id => "comment_submit_area" %>
-        <%= f.submit 'Publish', :class => "btn btn-default btn-lg" %>
-      <% end %>
+        <span class="input-group-btn">
+          <%= f.submit 'Publish', :class => "btn btn-lg btn-default" %>
+        </span>
+      </div>
 	</div>
-	<div class="col-md-2">
-	</div>
+    <% end %>
 	<br /><br /><hr />
 </div>
