--- a/SeeYo/app/views/yochats/_yochat.html.erb
+++ b/SeeYo/app/views/yochats/_yochat.html.erb
@@ -1,31 +1,35 @@
-<div class="row-fluid bg-white">
-  <div class="col-md-2">
-    <%= image_tag("head.jpg") %>
-  </div>
-  <div class="col-md-10">
-    <%= link_to yochat.user.username, '#' %>
-    <p><%= yochat.content %></p>
-    <p class="text-muted"><%= yochat.updated_at %></p>
-    <div class="btn-group btn-group-justified" role="group" aria-label="...">
-      <div class="btn-group" role="group">
-        <%= button_to 'Comment', yochat_path(yochat), :method => :get, remote: true, :class => "btn btn-default btn-xs" %>
+<div class="row" id="yochat_div<%= yochat.id %>">
+  <div class="col-md-12">
+    <div class="row-fluid bg-white">
+      <div class="col-md-2">
+        <%= image_tag("head.jpg") %>
       </div>
-      <% if yochat.user.username == @user.username%>
-      <div class="btn-group" role="group">
-        <button type="submit" class="btn btn-default btn-xs">Delete</button>
-      </div>
-      <% end %>
-      <div class="btn-group" role="group">
-        <button type="button" class="btn btn-default btn-xs">Like <span class="badge"><%= yochat.like %></span></button>
-      </div>
-    </div>
-    <hr />
-    <div class="row-fluid">
-      <div class="col-md-12" id="comment_submit_div<%= yochat.id %>">
-      </div>
-    </div>
-    <div class="row-fluid">
-      <div class="col-md-12" id="comment_show_div<%= yochat.id %>" >
+      <div class="col-md-10">
+        <%= link_to yochat.user.username, user_path(yochat.user) %>
+        <p><%= yochat.content %></p>
+        <p class="text-muted"><%= yochat.updated_at %></p>
+        <div class="btn-group btn-group-justified" role="group" aria-label="...">
+          <div class="btn-group" role="group">
+            <%= button_to 'Comment (' + yochat.comments.count.to_s + ')' , yochat_path(yochat), :method => :get, remote: true, :class => "btn btn-default btn-xs", :id => "comment_button" + yochat.id.to_s %>
+          </div>
+          <% if yochat.user.username == current_user.username%>
+          <div class="btn-group" role="group">
+            <%= button_to 'Delete', yochat_path(yochat), :method => :delete, remote: true, :class => "btn btn-default btn-xs" %>
+          </div>
+          <% end %>
+          <div class="btn-group" role="group">
+            <button type="button" class="btn btn-default btn-xs">Like <span class="badge"><%= yochat.like %></span></button>
+          </div>
+        </div>
+        <hr />
+        <div class="row-fluid">
+          <div class="col-md-12" id="comment_submit_div<%= yochat.id %>">
+          </div>
+        </div>
+        <div class="row-fluid">
+          <div class="col-md-12" id="comment_show_div<%= yochat.id %>" >
+          </div>
+        </div>
       </div>
     </div>
   </div>
