--- a/SeeYo/app/views/common/_profile_show.html.erb
+++ b/SeeYo/app/views/common/_profile_show.html.erb
@@ -2,7 +2,7 @@
 <table class="mytable table-hover" id="profile_table">
   <tr id="nickname">
     <td class="text-right text-muted" width="100">Nickname</td>
-    <td><%= @user.username %></td>
+    <td><%= @user.information.username %></td>
   </tr>
   <tr id="email">
     <td class="text-right text-muted" width="100">E-mail</td>
