--- a/SeeYo/app/views/staticpages/plaza.html.erb
+++ b/SeeYo/app/views/staticpages/plaza.html.erb
@@ -1,1 +1,21 @@
-<%= render :partial => "common/yochat_show" %>
+<div class="row-fluid">
+    <div class="col-md-12" >
+      <div class="row-fluid">
+        <div class="col-md-12" id="plaza_nav_div">
+          <ul class="nav nav-tabs" id="nav_ul">
+            <li role="presentation" class="active" id="all_li"><%= link_to "All YoChats", plaza_path(current_user, :operation => "0") %></li>
+            <li role="presentation" id="zone_li"><%= link_to "Zone", plaza_path(current_user, :operation => 1), :remote => true %></li>
+            <li role="presentation" id="circle_li"><%= link_to "Circle", plaza_path(current_user, :operation => 2), :remote => true %></li>
+            <li role="presentation" id="private_li"><%= link_to "Private", plaza_path(current_user, :operation => 3), :remote => true %></li>
+          </ul>
+          <br />
+        </div>
+      </div>
+      <div id="symbol_div" class="-1"></div>
+      <div class="row-fluid">
+        <div class="col-md-12" id="yochats_div">
+          <%= render @yochats %>
+        </div>
+      </div>
+  </div>
+</div>
