--- a/SeeYo/app/views/common/_comment_submit.html.erb
+++ b/SeeYo/app/views/common/_comment_submit.html.erb
@@ -5,6 +5,7 @@
     <%= form_for @comment, remote: true, :url => yochat_comments_path(@yochat) do |f| %>
 	<div class="col-md-10">
       <div class="input-group">
+        <%= f.text_field :ater_id, :style => "display:none" %>
         <%= f.text_area :content, :rows => 1, :placeholder => "Comment...", :style => "resize:none", :class => "form-control", :id => "comment_submit_area" %>
         <span class="input-group-btn">
           <%= f.submit 'Publish', :class => "btn btn-lg btn-default" %>
