--- a/SeeYo/app/views/common/_usernav.html.erb
+++ b/SeeYo/app/views/common/_usernav.html.erb
@@ -1,6 +1,16 @@
 <% if user_signed_in? %>
+  <% if current_user.yochat_unread > 0 %>
+    <% yochat_unread = content_tag("span", current_user.yochat_unread, :class => "badge") %>
+  <% else yochat_unread = "" %>
+  <% end %>
+  <% if current_user.messages_unread > 0 %>
+    <% messages_unread = content_tag("span", current_user.messages_unread, :class => "badge") %>
+  <% else messages_unread = "" %>
+  <% end %>
   <li><%= link_to t(:Homepage),  root_path %></li>
-  <li><%= link_to t(:Plaza),  plaza_path(current_user.id) %></li>
+  <li><%= link_to t(:YoChats) + yochat_unread,  plaza_path(current_user.id) %></li>
+  <li><%= link_to t(:YoFriends),  user_friends_path(current_user), :method => :get %></li>
+  <li><%= link_to t(:Messages) + messages_unread,  user_path(current_user, :operation => "3"), :method => :get %></li>
   <li><%= link_to current_user.information.username, user_path(current_user.id)%></li>
   <li class="dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Settings <span class="caret"></span></a>
