--- a/SeeYo/app/assets/stylesheets/myruby.css.erb
+++ b/SeeYo/app/assets/stylesheets/myruby.css.erb
@@ -40,3 +40,17 @@ td {
 a:active, a:hover {
     outline: 0px none;
 }
+
+.float-window {
+  display: none;
+  background-color: white;
+  position:absolute;
+  left: 40%;
+  top: 40%;
+  width: auto;
+  height: auto;
+  border:1px solid #EEE;
+  outline-style:double;
+  z-index: 10;
+}
+ 
