--- a/SeeYo/app/views/common/_profile_edit.html.erb
+++ b/SeeYo/app/views/common/_profile_edit.html.erb
@@ -16,8 +16,8 @@
   <tr id="gender">
     <td class="text-right text-muted" width="100">Gender</td>
     <td>
-      <%= f.radio_button :gender, 'Mars' %>Mars
-      <%= f.radio_button :gender, 'Venus' %>Venus
+      <%= f.radio_button :gender, 'male' %>Male
+      <%= f.radio_button :gender, 'female' %>Female
     </td>
   </tr>
   <tr id="birthday">
