--- a/SeeYo/app/views/yochats/create.js.erb
+++ b/SeeYo/app/views/yochats/create.js.erb
@@ -1,7 +1,12 @@
-$("#publish_text_area")[0].value = "";
+$("#publish_text_area").val("");
 $("#yochats_div").prepend("<%= escape_javascript(render @yochat) %>");
-$("#yochats_div").prepend("<%= escape_javascript(render :partial => 'common/modal_message') %>");
+$("#new_yochat").prepend("<%= escape_javascript(render :partial => 'common/float_window') %>");
+
 var cnt = parseInt($("#yochat_count").html()) + 1;
 $("#yochat_count").html(cnt.toString());
-$('#modal_div').modal('show');
-setTimeout( "$('#modal_div').modal('hide')", 1000);
+
+$("#yochat_div<%= @yochat.id %>").hide();
+$("#yochat_div<%= @yochat.id %>").fadeIn(1500);
+$("#float_window_div").fadeIn();
+setTimeout("$('#float_window_div').fadeOut()", 1000);
+setTimeout("$('#float_window_div').remove()", 1500);
