--- a/SeeYo/app/views/common/_usernav.html.erb
+++ b/SeeYo/app/views/common/_usernav.html.erb
@@ -10,11 +10,14 @@
   <li><%= link_to t(:Homepage),  root_path %></li>
   <li><%= link_to t(:YoChats) + yochat_unread,  plaza_path(current_user.id) %></li>
   <li><%= link_to t(:YoFriends),  user_friends_path(current_user), :method => :get %></li>
-  <li><%= link_to t(:Messages) + messages_unread,  user_path(current_user, :operation => "3"), :method => :get %></li>
+  <li><%= link_to t(:Messages) + messages_unread, user_path(current_user, :operation => "3"), :method => :get %></li>
   <li><%= link_to current_user.information.username, user_path(current_user.id)%></li>
   <li class="dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Settings <span class="caret"></span></a>
     <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+      <li role="presentation"><%= link_to "Edit profile", user_path(@user, :operation => "0"), :role => "menuitem", :tabindex => "-1"%></li>
+      <li role="presentation"><%= link_to "Edit avatar", user_path(@user, :operation => "4"), :role => "menuitem", :tabindex => "-1"%></li>
+      <li role="presentation"><%= link_to "Edit password", user_path(@user, :operation => "4"), :role => "menuitem", :tabindex => "-1"%></li>
       <li role="presentation" class="divider"></li>
       <li role="presentation"><%= link_to "Log out", destroy_user_session_path, :method => :delete, :role => "menuitem", :tabindex => "-1"%></li>
     </ul>
